refact: list artist metrics endpoint
